--- a/animation3d.html
+++ b/animation3d.html
@@ -53,16 +53,16 @@
 		<p class="info">Please make sure you're running the latest version of a <code>-webkit</code> based browser (Apple Safari or Google Chrome) to see the effect.</p>
 		<ul id="frames">
 			<li>
-				<img src="images/donna_bratdoll.jpg" alt="My Fiancee" width="300" />
+				<img src="images/donna_bratdoll.jpg" alt="My Wife" width="300" />
 				<div class="photoinfo">
-					<h3>My Fiancee</h3>
+					<h3>My Wife</h3>
 					<p>I love this picture of my lady, we met back in college and were re-united through Facebook...</p>
 				</div>
 			</li>
 			<li>
 				<img src="images/IMG_0450.JPG" alt="Pork Pie Kit" width="300" />
 				<div class="photoinfo">
-					<h3>My Fiancee again</h3>
+					<h3>My Wife again</h3>
 					<p>Since not to many photos in my collection compare, I thought I share another...</p>
 				</div>
 			</li>
